--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,6 @@
 @media screen and (min-width: 800px) {
   body {
+    overflow-x: hidden;
     background-color: #000000;
     padding: 0;
     margin: 0;
@@ -41,7 +42,7 @@
     background-color: transparent;
   }
   .mainContent .leftMainContent h2 {
-    color: #00e1ff;
+    color: #b63551;
     font-family: 'Quicksand', sans-serif;
     font-size: 55px;
     font-weight: bold;
@@ -88,7 +89,7 @@
     padding: 0.2rem;
   }
   .mainContent .rightMainContent ul li:hover a {
-    color: #00e1ff;
+    color: #b63551;
   }
   .mainContent .rightMainContent h1 {
     color: #ffffff;
@@ -109,5 +110,199 @@
     text-align: center;
     margin-left: 60%;
   }
+  .aboutmeContent {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .aboutmeContent .leftAboutmeContent {
+    display: inline-block;
+    width: 25%;
+  }
+  .aboutmeContent .leftAboutmeContent img {
+    max-height: 80%;
+    margin: 15%;
+    -webkit-box-shadow: 0px 0px 45px 10px #b63551;
+            box-shadow: 0px 0px 45px 10px #b63551;
+  }
+  .aboutmeContent .centerAboutmeContent {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-left: 11%;
+    font-family: 'Quicksand', sans-serif;
+    font-size: larger;
+    display: inline-block;
+    width: 28%;
+    color: #ffffff;
+    text-align: center;
+  }
+  .aboutmeContent .rightAboutmeContent {
+    display: inline-block;
+  }
+  .aboutmeContent .rightAboutmeContent img {
+    -webkit-box-shadow: 40px 40px 25px #b63551;
+            box-shadow: 40px 40px 25px #b63551;
+    max-height: 65%;
+    margin-top: 30%;
+    margin-left: 22%;
+  }
+  .portifolioContent {
+    background-color: transparent;
+    height: 90vh;
+    width: 100%;
+  }
+  .portifolioContent .leftPortifolioContent {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    width: 25%;
+    padding-top: 5%;
+  }
+  .portifolioContent .leftPortifolioContent img {
+    max-height: 80%;
+    margin-left: 20%;
+    padding-bottom: 10%;
+  }
+  .portifolioContent .leftPortifolioContent h2 {
+    color: #ffffff;
+    margin-left: 35%;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+  }
+}
+
+.div-slider {
+  width: auto;
+  height: auto;
+  text-align: center;
+}
+
+.slides-front {
+  padding: 0;
+  width: 80%;
+  height: 80%;
+  display: block;
+  margin: auto;
+  position: relative;
+}
+
+.slides-front * {
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
+.slides-front input {
+  display: none;
+}
+
+.slide-container {
+  display: block;
+}
+
+.slide {
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 80%;
+  display: block;
+  position: absolute;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: all .7s ease-in-out 0.1s;
+  transition: all .7s ease-in-out 0.1s;
+}
+
+.slide img {
+  max-width: 50%;
+}
+
+.nav label {
+  display: none;
+  position: absolute;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+  color: #FFF;
+  font-size: 156pt;
+  text-align: center;
+  line-height: 380px;
+  font-family: "Varela Round", sans-serif;
+  text-shadow: 0px 0px 15px #b63551;
+}
+
+.slide:hover + .nav label {
+  opacity: 0.5;
+}
+
+.nav label:hover {
+  opacity: 1;
+}
+
+.nav .next {
+  right: 0;
+}
+
+input:checked + .slide-container .slide {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: opacity 1s ease-in-out 0.1s;
+  transition: opacity 1s ease-in-out 0.1s;
+}
+
+input:checked + .slide-container .nav label {
+  display: block;
+}
+
+.nav-dots {
+  width: 100%;
+  bottom: 9px;
+  height: 11px;
+  display: block;
+  position: relative;
+  text-align: end;
+}
+
+.nav-dots .nav-dot {
+  top: 375px;
+  width: 11px;
+  height: 11px;
+  margin: 0 4px;
+  position: relative;
+  border-radius: 100%;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.nav-dots .nav-dot:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+input#img-1:checked ~ .nav-dots label#img-dot-1,
+input#img-2:checked ~ .nav-dots label#img-dot-2,
+input#img-3:checked ~ .nav-dots label#img-dot-3 {
+  background: rgba(0, 0, 0, 0.8);
 }
 /*# sourceMappingURL=style.css.map */
