--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,9 +4,11 @@ $transparentColor: transparent;
 $hoverColor: rgb(139, 137, 137);
 $colorWhite: #ffffff;
 $colorBlue:rgb(0, 225, 255);
+$colorRose:rgb(182, 53, 81);
 
 @media screen and (min-width: 800px) {
     body {
+        overflow-x: hidden;
         background-color: $primaryColor;
         padding: 0;
         margin: 0;
@@ -47,7 +49,7 @@ $colorBlue:rgb(0, 225, 255);
             background-color: $transparentColor;
             
             h2{
-                color: $colorBlue;
+                color: $colorRose;
                 font-family: 'Quicksand', sans-serif;
                 font-size: 55px;
                 font-weight: bold;
@@ -86,7 +88,7 @@ $colorBlue:rgb(0, 225, 255);
                     }
                     &:hover{
                         a{
-                            color: $colorBlue;
+                            color: $colorRose;
                         }
                     }
                 }
@@ -112,4 +114,177 @@ $colorBlue:rgb(0, 225, 255);
             }
         }
     }
+
+    .aboutmeContent {
+        background-color: $transparentColor;
+        width: 100%;
+        height: 100%;
+        display: inline-flex;
+        flex-direction: row;
+
+        .leftAboutmeContent{
+            display: inline-block;
+            width: 25%;
+            img{
+                max-height: 80%;
+                margin: 15%;
+                box-shadow: 0px 0px 45px 10px $colorRose;
+        
+            }
+        }
+        .centerAboutmeContent{
+            align-items: center;
+            align-self: center;
+            margin-left: 11%;
+            font-family: 'Quicksand', sans-serif;
+            font-size: larger;
+            display: inline-block;
+            width: 28%;
+            color: $colorWhite;
+            text-align: center;
+        }
+        .rightAboutmeContent{
+            display: inline-block;
+            img{
+                box-shadow: 40px 40px 25px $colorRose;
+                max-height: 65%;
+                margin-top: 30%;
+                margin-left: 22%;
+            }
+        }
+    }
+    .portifolioContent{
+        background-color: $transparentColor;
+        height: 90vh;
+        width: 100%;
+        
+        .leftPortifolioContent{
+            display: inline-flex;
+            width: 25%;
+            padding-top: 5%;
+            
+            img{
+                max-height: 80%;
+                margin-left: 20%;
+                padding-bottom: 10%;
+            }
+
+            h2{
+                color: $colorWhite;
+                margin-left: 35%;
+                font-family: 'Quicksand', sans-serif;
+                font-size: 50px;
+                font-weight: bold;
+            }
+        }
+    }
 }
+
+
+
+//teste 
+
+.div-slider{
+    width: auto;
+    height: auto;
+    text-align: center;
+    }
+    .slides-front {
+        padding: 0;
+        width: 80%;
+        height: 80%;
+        display: block;
+        margin: auto;
+        position: relative;
+    }
+    
+    .slides-front * {
+        user-select: none;
+        -ms-user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+    }
+    
+    .slides-front input { display: none; }
+    
+    .slide-container { display: block; }
+    
+    .slide {
+        top: 0;
+        opacity: 0;
+        width: 100%;
+        height: 80%;
+        display: block;
+        position: absolute;
+    
+        transform: scale(0);
+    
+        transition: all .7s ease-in-out 0.1s;
+    }
+    
+    .slide img {
+        max-width: 50%;
+    }
+    
+    .nav label {
+        display: none;
+        position: absolute;
+        align-items: center;
+        opacity: 0;
+        z-index: 9;
+        cursor: pointer;
+        transition: opacity .2s;
+        color: #FFF;
+        font-size: 156pt;
+        text-align: center;
+        line-height: 380px;
+        font-family: "Varela Round", sans-serif;
+        text-shadow: 0px 0px 15px $colorRose;
+    }
+    
+    .slide:hover + .nav label { opacity: 0.5; }
+    
+    .nav label:hover { opacity: 1; }
+    
+    .nav .next { right: 0; }
+    
+    input:checked + .slide-container  .slide {
+        opacity: 1;
+    
+        transform: scale(1);
+    
+        transition: opacity 1s ease-in-out 0.1s;
+    }
+    
+    input:checked + .slide-container .nav label { display: block; }
+    
+    .nav-dots {
+        width: 100%;
+        bottom: 9px;
+        height: 11px;
+        display: block;
+        position: relative;
+        text-align: end;
+    }
+    
+    .nav-dots .nav-dot {
+        top: 375px;
+        width: 11px;
+        height: 11px;
+        margin: 0 4px;
+        position: relative;
+        border-radius: 100%;
+        display: inline-block;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+    
+    .nav-dots .nav-dot:hover {
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    input#img-1:checked ~ .nav-dots label#img-dot-1,
+    input#img-2:checked ~ .nav-dots label#img-dot-2,
+    input#img-3:checked ~ .nav-dots label#img-dot-3{
+        background: rgba(0, 0, 0, 0.8);}
