--- a/scss/style.css
+++ b/scss/style.css
@@ -159,7 +159,7 @@
   }
   .portifolioContent {
     background-color: transparent;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
   }
   .portifolioContent .leftPortifolioContent {
@@ -167,7 +167,7 @@
     display: -ms-inline-flexbox;
     display: inline-flex;
     width: 25%;
-    padding-top: 5%;
+    padding-top: 2%;
   }
   .portifolioContent .leftPortifolioContent img {
     max-height: 80%;
@@ -180,6 +180,147 @@
     font-family: 'Quicksand', sans-serif;
     font-size: 50px;
     font-weight: bold;
+  }
+  .contactContent {
+    color: #000000;
+    background-color: #b63551;
+    width: 100%;
+    height: 90%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+  .contactContent .leftContactContent {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contactContent .leftContactContent h2 {
+    color: #000000;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 30px;
+  }
+  .contactContent .leftContactContent p {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .contactContent .leftContactContent form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 80%;
+    height: 100%;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid #000000;
+  }
+  .contactContent .leftContactContent form input {
+    width: 60%;
+    height: 15%;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: transparent;
+    outline: none;
+  }
+  .contactContent .leftContactContent form textarea {
+    width: 60%;
+    height: 30%;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: transparent;
+    outline: none;
+  }
+  .contactContent .leftContactContent form button {
+    color: #000000;
+    border: 2px solid #000000;
+  }
+  .contactContent .leftContactContent form button:hover {
+    color: #ffffff;
+    background-color: #000000;
+  }
+  .contactContent .leftContactContent form ::-webkit-input-placeholder {
+    color: #000000;
+  }
+  .contactContent .leftContactContent form :-ms-input-placeholder {
+    color: #000000;
+  }
+  .contactContent .leftContactContent form ::-ms-input-placeholder {
+    color: #000000;
+  }
+  .contactContent .leftContactContent form ::placeholder {
+    color: #000000;
+  }
+  .contactContent .rightContactContent {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contactContent .rightContactContent h2 {
+    color: #000000;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+  }
+  .contactContent .rightContactContent p {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    margin: 10%;
+    font-weight: 600;
+  }
+  .contactContent .rightContactContent a {
+    color: #ffffff;
+    text-decoration: none;
   }
 }
 
