--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,14 +154,15 @@ $colorRose:rgb(182, 53, 81);
         }
     }
     .portifolioContent{
+
         background-color: $transparentColor;
-        height: 90vh;
+        height: 100vh;
         width: 100%;
         
         .leftPortifolioContent{
             display: inline-flex;
             width: 25%;
-            padding-top: 5%;
+            padding-top: 2%;
             
             img{
                 max-height: 80%;
@@ -175,6 +176,118 @@ $colorRose:rgb(182, 53, 81);
                 font-family: 'Quicksand', sans-serif;
                 font-size: 50px;
                 font-weight: bold;
+            }
+        }
+    }
+    .contactContent{
+        color: $primaryColor;
+        background-color: $colorRose;
+        width: 100%;
+        height: 90%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        
+        .leftContactContent{
+            background-color: $transparentColor;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            h2{
+                color: $primaryColor;
+                font-family: 'Quicksand', sans-serif;
+                font-size: 30px;
+            }
+
+            p{
+                font-family: 'Quicksand', sans-serif;
+                font-size: 20px;
+                font-weight: 600;
+            }
+
+            form{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 80%;
+                height: 100%;
+                background-color: $transparentColor;
+                border-radius: 5px;
+                padding: 10px;
+                margin: 10px;
+                border: 2px solid $primaryColor;
+                
+                input{
+                    width: 60%;
+                    height: 15%;
+                    border: 2px solid $primaryColor;
+                    border-radius: 5px;
+                    padding: 10px;
+                    margin: 10px;
+                    font-family: 'Quicksand', sans-serif;
+                    font-size: 20px;
+                    color: $colorWhite;
+                    background-color: $transparentColor;
+                    outline: none;
+                }
+                textarea{
+                    width: 60%;
+                    height: 30%;
+                    border: 2px solid $primaryColor;
+                    border-radius: 5px;
+                    padding: 10px;
+                    margin: 10px;
+                    font-family: 'Quicksand', sans-serif;
+                    font-size: 20px;
+                    color: $colorWhite;
+                    background-color: $transparentColor;
+                    outline: none;
+                }
+                button{
+                    color: $primaryColor;
+                    border: 2px solid $primaryColor;
+                
+                    &:hover {
+                        color: $colorWhite;
+                        background-color: $primaryColor;
+                    }
+                }
+                ::placeholder {
+                    color: $primaryColor;
+                }
+            }
+        }
+        .rightContactContent{
+            background-color: $transparentColor;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            h2{
+                color: $primaryColor;
+                font-family: 'Quicksand', sans-serif;
+                font-size: 50px;
+                font-weight: bold;
+            }
+
+            p{
+                font-family: 'Quicksand', sans-serif;
+                font-size: 25px;
+                text-align: center;
+                margin: 10%;
+                font-weight: 600;
+            }
+
+            a{
+                color: $colorWhite;
+                text-decoration: none;
             }
         }
     }
