--- a/scss/style.scss
+++ b/scss/style.scss
@@ -291,6 +291,21 @@ $colorRose:rgb(182, 53, 81);
             }
         }
     }
+    footer {    
+        background-color: $primaryColor;
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        color: $colorWhite;
+        font-family: 'Quicksand', sans-serif;
+        font-size: 20px;
+        font-weight: bold;
+        padding: 10px;
+        margin: 10px;
+    }
 }
 
 
