--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,7 +59,7 @@ $colorRose:rgb(182, 53, 81);
             }
         }
         
-        .rightMainContent{
+        main{
             background-color: rgba(0, 0, 0, 0.6);
             width: 100vh;
             height: 100%;
@@ -118,38 +118,34 @@ $colorRose:rgb(182, 53, 81);
     .aboutmeContent {
         background-color: $transparentColor;
         width: 100%;
-        height: 100%;
-        display: inline-flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr 0.3fr 1fr;
 
         .leftAboutmeContent{
-            display: inline-block;
-            width: 25%;
+            // width: 25%;
             img{
-                max-height: 80%;
+                align-self: center;
+                max-height: 50%;
                 margin: 15%;
                 box-shadow: 0px 0px 45px 10px $colorRose;
-        
             }
         }
         .centerAboutmeContent{
-            align-items: center;
             align-self: center;
-            margin-left: 11%;
+            align-items: center;
             font-family: 'Quicksand', sans-serif;
             font-size: larger;
-            display: inline-block;
-            width: 28%;
             color: $colorWhite;
             text-align: center;
+            position: relative;
         }
         .rightAboutmeContent{
-            display: inline-block;
+
             img{
+                align-self: center;
                 box-shadow: 40px 40px 25px $colorRose;
-                max-height: 65%;
-                margin-top: 30%;
-                margin-left: 22%;
+                max-width: 70%;
+                margin: 15%;
             }
         }
     }
@@ -162,7 +158,6 @@ $colorRose:rgb(182, 53, 81);
         .leftPortifolioContent{
             display: inline-flex;
             width: 25%;
-            padding-top: 2%;
             
             img{
                 max-height: 80%;
@@ -307,8 +302,6 @@ $colorRose:rgb(182, 53, 81);
         margin: 10px;
     }
 }
-
-
 
 //teste 
 
